--- a/src/app/pages/dashboard/contacts/contacts.component.html
+++ b/src/app/pages/dashboard/contacts/contacts.component.html
@@ -1,7 +1,7 @@
 <nb-card size="giant">
   <nb-tabset fullWidth>
 
-    <nb-tab tabTitle="Contacts">
+    <nb-tab tabTitle="Clients With Errors">
       <nb-list>
         <nb-list-item class="contact" *ngFor="let c of contacts">
           <nb-user [picture]="c.user.picture" [name]="c.user.name" [title]="c.type" size="large"></nb-user>
@@ -10,14 +10,14 @@
       </nb-list>
     </nb-tab>
 
-    <nb-tab tabTitle="Recent">
+    <!-- <nb-tab tabTitle="Recent">
       <nb-list>
         <nb-list-item class="contact" *ngFor="let c of recent">
           <nb-user [picture]="c.user.picture" [name]="c.user.name" [title]="c.type" size="large"></nb-user>
           <span class="caption">{{ c.time | date: 'shortTime' }}</span>
         </nb-list-item>
       </nb-list>
-    </nb-tab>
+    </nb-tab> -->
 
   </nb-tabset>
 </nb-card>
