--- a/src/app/pages/e-commerce/e-commerce.component.html
+++ b/src/app/pages/e-commerce/e-commerce.component.html
@@ -12,9 +12,9 @@
     <ngx-traffic-reveal-card></ngx-traffic-reveal-card>
   </div>
 
-  <div class="col-xxl-7">
+  <!-- <div class="col-xxl-7">
     <ngx-ecommerce-charts></ngx-ecommerce-charts>
-  </div>
+  </div> -->
 </div>
 
 <div class="row">
@@ -22,17 +22,23 @@
     <ngx-country-orders></ngx-country-orders>
   </div>
 
-  <div class="col-xxl-3">
+  <!-- <div class="col-xxl-3">
     <ngx-progress-section></ngx-progress-section>
-  </div>
+  </div> -->
 </div>
 
 <div class="row">
-  <div class="col-xxl-9">
+  <!-- <div class="col-xxl-9">
     <ngx-ecommerce-visitors-analytics></ngx-ecommerce-visitors-analytics>
-  </div>
+  </div> -->
 
-  <div class="col-xxl-3">
+  <!-- <div class="col-xxl-3">
     <ngx-user-activity></ngx-user-activity>
-  </div>
+  </div> -->
+
+
+  
+  <!-- <div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6">
+    <ngx-contacts></ngx-contacts>
+  </div> -->
 </div>
