loader and pie chart with data

--- a/src/app/pages/e-commerce/e-commerce.component.html
+++ b/src/app/pages/e-commerce/e-commerce.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xxl-5">
+  <div class="col-xxl-6">
     <div class="row">
       <div class="col-md-6">
         <ngx-profit-card></ngx-profit-card>
@@ -12,33 +12,22 @@
     <ngx-traffic-reveal-card></ngx-traffic-reveal-card>
   </div>
 
-  <!-- <div class="col-xxl-7">
-    <ngx-ecommerce-charts></ngx-ecommerce-charts>
-  </div> -->
+  <div class="col-xxl-6">
+    <div class="row">
+      <div class="col-md-12">
+        <nb-card style="height: 585px;">
+          <nb-card-header>Console Errors</nb-card-header>
+          <nb-card-body>
+            <ngx-echarts-pie></ngx-echarts-pie>
+          </nb-card-body>
+        </nb-card>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="row">
-  <div class="col-xxl-9">
+  <div class="col-xxl-12">
     <ngx-country-orders></ngx-country-orders>
   </div>
-
-  <!-- <div class="col-xxl-3">
-    <ngx-progress-section></ngx-progress-section>
-  </div> -->
-</div>
-
-<div class="row">
-  <!-- <div class="col-xxl-9">
-    <ngx-ecommerce-visitors-analytics></ngx-ecommerce-visitors-analytics>
-  </div> -->
-
-  <!-- <div class="col-xxl-3">
-    <ngx-user-activity></ngx-user-activity>
-  </div> -->
-
-
-  
-  <!-- <div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6">
-    <ngx-contacts></ngx-contacts>
-  </div> -->
 </div>
